# btc-trading-bot

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  MANIFEST.in  Makefile  README.md  docker-compose.yml  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_ingestion.py  setup.py  setup_and_run.py  setup_db.py
.github/: pull_request_template.md
.github/workflows/: style-check.yml
analytics/: __init__.py  evaluation.py  performance.py  plotter.py  portfolio.py  s2f.py
api/: database.py  main.py  models.py  schemas.py
api/routes/: core.py  export.py
api/utils/: export_csv.py  export_pdf.py
backtests/: btc_accumulation_backtest.py  ema_rsi_trend_backtest.py  ema_s2f_backtest.py  halving_backtest.py  hybrid_trend_backtest_runner.py  monthly_entry_comparison.py  monthly_injection_runner.py  multi_period_backtest_runner.py  run_grid.py
data/: s2f_model.csv
data_ingestion/: errors.py  exchangerate_client.py  fetcher.py  historic_fetcher.py  onchain_data_loader.py  scheduler.py
docs/: monthly_backtest_guide.md
frontend/: EvaluationHistory.jsx  StrategySimulator.jsx  package-lock.json
migrations/: env.py
services/: evaluation.py
storage/: database.py  models.py  repository.py
strategies/: breakout_atr.py  btc_accumulation_live.py  ema_rsi_trend.py  ema_s2f.py  halving_strategy.py  rsi_mean_reversion.py  s2f_only.py
tests/: test_compare_hold.py  test_database.py  test_fiat_ingestion.py  test_historic_fetcher.py
tools/: db.py  ensure_data_and_run.py  load_fixtures.py  reset_db.py
(+9 files in other folders)
